# Telegram-attendance-bot

./: README.md  main.py  models.py  pyproject.toml  requirements.txt  settings.py
